--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -35,7 +35,7 @@
           <div class="input-group-prepend">
             <i class="input-group-text fa fa-lock"></i>
           </div>
-          <input type="password" class="form-control" placeholder="Password" formControlName="password">
+          <input [type]="isShowPassword ? 'text' : 'password'" class="form-control" placeholder="Password" formControlName="password">
           <div class="password-visible-wrapper">
             <a (click)="isShowPassword = !isShowPassword" class="action">{{isShowPassword ? 'Hide' : 'Show'}}</a>
           </div>
@@ -53,7 +53,7 @@
         </div>
         <div class="terms-container">
           <p>By creating an account, you agree to our</p>
-          <p><a>Terms of Use</a> and <a>Privacy Policy</a></p>
+          <p><a (click)="showTerms()">Terms of Use</a> and <a (click)="showPolicy()">Privacy Policy</a></p>
         </div>
         <button class="btn btn-default btn-join" [disabled]="signUpForm.invalid" (click)="signUp()">Join</button>
         <div class="login-form-container">
