--- a/src/app/pages/article/containers/article-page/article.component.html
+++ b/src/app/pages/article/containers/article-page/article.component.html
@@ -47,3 +47,8 @@
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col-lg-9">
+    <dsod-article-reviews></dsod-article-reviews>
+  </div>
+</div>
