--- a/src/app/layout/profile/profile-view/profile-view.component.html
+++ b/src/app/layout/profile/profile-view/profile-view.component.html
@@ -5,11 +5,11 @@
   <div class="profile-body">
     <div class="section-container">
       <div class="userInfo-container">
-        <img class="avatar" src="/assets/images/no-avatar.png">
+        <img class="avatar" [src]="userProfile?.photo_url ? (avatarBaseUrl + userProfile.photo_url) : '/assets/images/no-avatar.png'">
         <div class="userInfo-wrapper">
-          <span class="userName">Rebecca Clarson</span>
+          <span class="userName">{{userProfile?.full_name}}</span>
           <span class="role">Speciality</span>
-          <span class="job">General Practitioner</span>
+          <span class="job">{{userProfile?.specialty?.name}}</span>
         </div>
       </div>
     </div>
@@ -21,11 +21,17 @@
             <div class="icon-body-item">
               <img src="/assets/images/icons/icon_location.png">
             </div>
-            <div class="item-content">
+            <div class="item-content" *ngIf="userProfile?.practiceAddress; else noPracticeAddress">
               <span class="title">Practice Address</span>
-              <span class="content">1000 Wyckoff Ave.</span>
-              <span class="content">Mahwah, NJ07430</span>
+              <span class="content">{{userProfile?.practiceAddress.address1}} {{userProfile?.practiceAddress.address2}}</span>
+              <span class="content">{{userProfile?.practiceAddress.city}} {{userProfile?.practiceAddress.states}} {{userProfile?.practiceAddress.zipCode}}</span>
             </div>
+            <ng-template #noPracticeAddress>
+              <div class="item-content">
+                <span class="title">Practice Address</span>
+                <span class="content">No Address added yet.</span>
+              </div>
+            </ng-template>
           </div>
           <div class="body-item-wrapper">
             <div class="icon-body-item">
@@ -33,7 +39,10 @@
             </div>
             <div class="item-content">
               <span class="title">Mobile Number</span>
-              <span class="content">(123) 456-789</span>
+              <span class="content" *ngIf="userProfile?.phone; else noPhoneNumber">{{userProfile?.phone}}</span>
+              <ng-template #noPhoneNumber>
+                <span class="content">No PhoneNumber added yet.</span>
+              </ng-template>
             </div>
           </div>
           <div class="body-item-wrapper">
@@ -42,7 +51,10 @@
             </div>
             <div class="item-content">
               <span class="title">Preferred Email Address</span>
-              <span class="content">amazingdentist@gmail.com</span>
+              <span class="content" *ngIf="userProfile?.email; else noEmail">{{userProfile?.email}}</span>
+              <ng-template #noEmail>
+                <span class="content">No Preferred Email Address added yet.</span>
+              </ng-template>
             </div>
           </div>
         </div>
@@ -51,48 +63,101 @@
     <div class="section-container">
       <div class="info-container">
         <p class="title">Experience</p>
-        <div class="body-wrapper">
-          <div class="body-item-wrapper">
+        <div class="body-wrapper" *ngIf="userProfile?.experiences.length; else noExperience">
+          <div class="body-item-wrapper" *ngFor="let experience of userProfile?.experiences">
             <div class="icon-body-item gray-background">
               <img src="/assets/images/icons/icon_experience_active.png">
             </div>
             <div class="item-content">
-              <span class="title">Associate Dentist</span>
-              <span class="content">Dental Care Alliance</span>
-              <span class="content">Mar 2016 - Present</span>
+              <span class="title">{{experience.practice_Role?.name}}</span>
+              <span class="content">{{experience.practice_DSO?.name}}</span>
+              <span class="content" *ngIf="experience?.end_time">
+                {{experience?.start_time | date:"MMM yyyy":'+0000'}} - {{experience?.end_time | date:"MMM yyyy":'+0000'}}
+              </span>
+              <span class="content" *ngIf="!experience?.end_time">
+                {{experience?.start_time | date:"MMM yyyy":'+0000'}} - Present
+              </span>
             </div>
           </div>
         </div>
+        <ng-template #noExperience>
+          <div class="body-wrapper">
+            <div class="body-item-wrapper">
+              <div class="icon-body-item gray-background">
+                <img src="/assets/images/icons/icon_experience_active.png">
+              </div>
+              <div class="item-content">
+                <span class="content">No experience added yet.</span>
+              </div>
+            </div>
+          </div>
+        </ng-template>
       </div>
     </div>
     <div class="section-container">
       <div class="info-container">
         <p class="title">Residency</p>
-        <div class="body-wrapper">
-          <div class="body-item-wrapper">
+        <div class="body-wrapper" *ngIf="userProfile?.profileResidency.length; else noResidency">
+          <div class="body-item-wrapper" *ngFor="let residency of userProfile?.profileResidency">
             <div class="icon-body-item gray-background">
               <img src="/assets/images/icons/icon_location_active.png">
             </div>
             <div class="item-content">
-              <span class="content">No residency added yet.</span>
+              <span class="title">{{residency.dental_School?.name}}</span>
+              <span class="content" *ngIf="residency?.end_time">
+                {{residency?.start_time | date:"MMM yyyy":'+0000'}} - {{residency?.end_time | date:"MMM yyyy":'+0000'}}
+              </span>
+              <span class="content" *ngIf="!residency?.end_time">
+                {{residency?.start_time | date:"MMM yyyy":'+0000'}} - Present
+              </span>
             </div>
           </div>
         </div>
+        <ng-template #noResidency>
+          <div class="body-wrapper">
+            <div class="body-item-wrapper">
+              <div class="icon-body-item gray-background">
+                <img src="/assets/images/icons/icon_location_active.png">
+              </div>
+              <div class="item-content">
+                <span class="content">No residency added yet.</span>
+              </div>
+            </div>
+          </div>
+        </ng-template>
       </div>
     </div>
     <div class="section-container">
       <div class="info-container">
         <p class="title">Education</p>
-        <div class="body-wrapper">
-          <div class="body-item-wrapper">
+        <div class="body-wrapper" *ngIf="userProfile?.educations.length; else noEducation">
+          <div class="body-item-wrapper" *ngFor="let education of userProfile?.educations">
             <div class="icon-body-item gray-background">
               <img src="/assets/images/icons/icon_education_active.png">
             </div>
             <div class="item-content">
-              <span class="content">No education added yet.</span>
+              <span class="title">{{education.school_name}}</span>
+              <span class="content" *ngIf="education?.end_time">
+                {{education?.start_time | date:"MMM yyyy":'+0000'}} - {{education?.end_time | date:"MMM yyyy":'+0000'}}
+              </span>
+              <span class="content" *ngIf="!education?.end_time">
+                {{education?.start_time | date:"MMM yyyy":'+0000'}} - Present
+              </span>
             </div>
           </div>
         </div>
+        <ng-template #noEducation>
+          <div class="body-wrapper">
+            <div class="body-item-wrapper">
+              <div class="icon-body-item gray-background">
+                <img src="/assets/images/icons/icon_education_active.png">
+              </div>
+              <div class="item-content">
+                <span class="content">No education added yet.</span>
+              </div>
+            </div>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
