--- a/src/app/pages/article/components/article-content/article-content.component.scss
+++ b/src/app/pages/article/components/article-content/article-content.component.scss
@@ -8,15 +8,16 @@
      div {
        padding-top: 0 !important;
      }
-      span {
-        position: relative !important;
-        top: auto !important;
-        right: auto !important;
-        bottom: auto !important;
-        left: auto !important;
-        width: auto !important;
-        height: auto !important;
-      }
+
+     span {
+       position: relative !important;
+       top: auto !important;
+       right: auto !important;
+       bottom: auto !important;
+       left: auto !important;
+       width: auto !important;
+       height: auto !important;
+     }
    }
 
    /deep/ iframe {
@@ -137,6 +138,15 @@
        i {
          color: $color-primary;
        }
+     }
+   }
+ }
+
+
+ @media only screen and (max-width:1440px) {
+   .article-content {
+     /deep/ p {
+       font-size: 16px;
      }
    }
  }
