--- a/src/app/pages/article/components/article-media/article-media.component.scss
+++ b/src/app/pages/article/components/article-media/article-media.component.scss
@@ -6,7 +6,7 @@
 
   h2 {
     font-family: $neue_hgd_Thin;
-    font-size: 50px;
+    font-size: 40px;
     line-height: 60px;
   }
 
@@ -35,4 +35,31 @@
     font-size: 22px;
     line-height: 35px;
   }
+}
+
+
+@media only screen and (max-width:1440px) {
+  .article-header {
+    h2 {
+      font-size: 35px;
+      line-height: 50px;
+    }
+
+    span.by {
+      font-size: 26px;
+    }
+  }  
+}
+
+@media only screen and (max-width:1366px) {
+  .article-header {
+    h2 {
+      font-size: 31px;
+       line-height: 40px;
+    }
+
+    span.by {
+      font-size: 24px;
+    }
+  }  
 }
