--- a/src/app/pages/article/components/article-content/article-content.component.scss
+++ b/src/app/pages/article/components/article-content/article-content.component.scss
@@ -143,10 +143,40 @@
  }
 
 
- @media only screen and (max-width:1440px) {
-   .article-content {
-     /deep/ p {
-       font-size: 16px;
-     }
-   }
- }
+@media only screen and (max-width:1440px) {
+
+    .article-content {
+
+      /deep/ p {
+        font-size: 16px;
+
+        a {
+          font-size: 16px;
+        }
+      }
+
+      /deep/ pre {
+        font-size: 16px;
+
+        em {
+          font-size: 16px;
+        }
+      }
+
+      /deep/ h2 {
+        font-size: 22px;
+      }
+
+      /deep/ ul {
+        li {
+          font-size: 16px;
+        }
+      }
+
+      /deep/ ol {
+        li {
+          font-size: 16px;
+        }
+      }
+    }
+  }
